# total

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  README.md  adc.c  adc.h  adc.py  conductivity.c  conductivity.py  dmapwm.c  dmapwm.h  generate_sine_table.py  gui.py  i2c.c  i2c.h  linalg.c  linalg.h  main.c  pcb.sch  pwm.c  pwm.h  python-requirements.txt  sensor-test.py  sensor.c  sensor.py  serialio.c  serialio.py  setup.sh  sine.c  sine.h  sine.h.backup  sine.h.backup2  sine.h.backup3  sine.py  sine_analysis.c  sine_analysis.h  sinetable.h  sinetables.h  test.py  water-sensor.desktop
eagle/: components.xlsx  pcb.brd
setup/: .bashrc  requirements.txt  setup.sh
src/pico/: adc.c  adc.h  i2c.c  main.c  pwm.c  sine.c  sine.h
src/ui/: cli.py  sensor.py  water-sensor.desktop
templates/: sine.h.j2  sinetable.h.j2  sinetables.h.j2
